syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option go_package = "github.com/hashgraph/hedera-sdk-go/v2/proto";

option java_package = "com.hedera.hashgraph.proto";
option java_multiple_files = true;

import "proto/BasicTypes.proto";
import "proto/Timestamp.proto";
import "proto/QueryHeader.proto";
import "proto/ResponseHeader.proto";
import "proto/SchedulableTransactionBody.proto";

/*
Gets information about a schedule in the network's action queue.

Responds with <tt>INVALID_SCHEDULE_ID</tt> if the requested schedule doesn't exist.
*/
message ScheduleGetInfoQuery {
  QueryHeader header = 1; // standard info sent from client to node including the signed payment, and what kind of response is requested (cost, state proof, both, or neither).
  ScheduleID scheduleID = 2; // The id of the schedule to interrogate
}

/*
  Information summarizing schedule state 
*/
message ScheduleInfo {  
  ScheduleID scheduleID = 1; // The id of the schedule
  bool deleted = 2; // Has the schedule been deleted?
  bool executed = 3; // Has the schedule been executed?
  SchedulableTransactionBody scheduledTransactionBody = 4; // The scheduled transaction
  string memo = 5; // The publicly visible memo of the schedule
  Key adminKey = 6; // The key used to delete the schedule from state
  KeyList signers = 7; // The Ed25519 keys the network deems to have signed the scheduled transaction
  AccountID creatorAccountID = 8; // The id of the account that created the schedule
  AccountID payerAccountID = 9; // The id of the account responsible for the service fee of the scheduled transaction
  TransactionID scheduledTransactionID = 10; // The transaction id that will be used in the record of the scheduled transaction (if it executes)
}  

/*
Response wrapper for the <tt>ScheduleInfo</tt>
*/
message ScheduleGetInfoResponse {
  ResponseHeader header = 1; // Standard response from node to client, including the requested fields: cost, or state proof, or both, or neither
  ScheduleInfo scheduleInfo = 2; // The information requested about this schedule instance
}
